[package]
name = "breadboard-firmware"
version = "0.0.1"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2018"

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = "0.3.5"
eeprom24x = "0.1"
hash32 = "0.1.1"
heapless = "0.5.2"
kvs = { path = "../../kvs/"}
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
stm32g0xx-hal = { version = "0.0.8", features = ["rt", "stm32g07x"] } 
typenum = "1.11.2"
nb = "0.1.1"
wire4 = { path = "../../wire4/" }

[profile.release]
lto = true